--- a/Sample/PizzaReader.ipynb
+++ b/Sample/PizzaReader.ipynb
@@ -25,40 +25,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[0 0 0 0 0]\n",
-      " [0 1 1 1 0]\n",
-      " [0 0 0 0 0]]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "header_id = text.index('\\n')\n",
     "# Get header\n",
     "header = text[0:header_id].split(' ')\n",
-    "row =  int(instruction[0])\n",
-    "col =  int(instruction[1])\n",
-    "pmin = int(instruction[2])\n",
-    "pmax = int(instruction[3])\n",
+    "row =  int(header[0])\n",
+    "col =  int(header[1])\n",
+    "pmin = int(header[2])\n",
+    "pmax = int(header[3])\n",
     "# Get body\n",
     "body = text[header_id:]\n",
     "body = body.replace('T','0 ').replace('M','1 ').replace('\\n','')\n",
     "body = np.fromstring(body, dtype=int, sep=' ')\n",
-    "body = np.reshape(body, (row,col))\n",
-    "print(body)"
+    "body = np.reshape(body, (row,col))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
