--- a/YouTubeVideo/DataRead.ipynb
+++ b/YouTubeVideo/DataRead.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 114,
    "metadata": {
     "collapsed": false
    },
@@ -36,47 +36,48 @@
     }
    ],
    "source": [
-    "# Setting for loaded files\n",
-    "print_debug = True\n",
-    "id_file_to_load = 0 # form 0 to 3\n",
+    "def load_data(id_file_to_load = 0, print_debug = True):\n",
+    "    # Load file\n",
+    "    file = open(files[id_file_to_load], 'r') \n",
     "\n",
-    "# Load file\n",
-    "file = open(files[id_file_to_load], 'r') \n",
+    "    # Header / Video / Endpoints / request descr. / Cache\n",
+    "    header = file.readline().replace('\\n','')\n",
+    "    header = np.fromstring(header, dtype=int, sep=' ')\n",
+    "    header_dict = {   'n_video':header[0], 'n_endpoint':header[1], \n",
+    "                      'requ_des':header[2], 'n_cache':header[3],\n",
+    "                      'size_cache':header[4]}\n",
     "\n",
-    "# Header / Video / Endpoints / request descr. / Cache\n",
-    "header = file.readline().replace('\\n','')\n",
-    "header = np.fromstring(header, dtype=int, sep=' ')\n",
-    "header_dict = {   'n_video':header[0], 'n_endpoint':header[1], \n",
-    "                  'requ_des':header[2], 'n_cache':header[3],\n",
-    "                  'size_cache':header[4]}\n",
+    "    # Video size in MB\n",
+    "    video_size = file.readline().replace('\\n','')\n",
+    "    video_size = np.fromstring(video_size, dtype=int, sep=' ')\n",
     "\n",
-    "# Video size in MB\n",
-    "video_size = file.readline().replace('\\n','')\n",
-    "video_size = np.fromstring(video_size, dtype=int, sep=' ')\n",
+    "    # Endpoints locations and connections\n",
+    "    endpoint_cache = np.zeros((header_dict['n_endpoint'], header_dict['n_cache'])) # Latency endpoint to cache\n",
+    "    endpoint_datacenter = np.zeros(header_dict['n_endpoint']) # Latency endpoint to datacenter\n",
+    "    endpoint_video = np.zeros((header_dict['n_endpoint'], header_dict['n_video'])) # Endpoints requests\n",
     "\n",
-    "# Endpoints locations and connections\n",
-    "endpoint_cache = np.zeros((header_dict['n_endpoint'], header_dict['n_cache'])) # Latency endpoint to cache\n",
-    "endpoint_datacenter = np.zeros(header_dict['n_endpoint']) # Latency endpoint to datacenter\n",
-    "endpoint_video = np.zeros((header_dict['n_endpoint'], header_dict['n_video'])) # Endpoints requests\n",
+    "    # Reding endpoint to cache latency and endpoint to data_center latency\n",
+    "    for id_endpoint in range(header_dict['n_endpoint']):\n",
+    "        endpoint = file.readline().replace('\\n','').split(' ')\n",
+    "        endpoint_datacenter[id_endpoint] = int(endpoint[0])\n",
+    "        n_latency = int(endpoint[1])\n",
+    "        for i in range(n_latency):\n",
+    "            lat_cache = file.readline().replace('\\n','').split(' ')\n",
+    "            endpoint_cache[id_endpoint, int(lat_cache[0])] = int(lat_cache[1])\n",
     "\n",
-    "# Reding endpoint to cache latency and endpoint to data_center latency\n",
-    "for id_endpoint in range(header_dict['n_endpoint']):\n",
-    "    endpoint = file.readline().replace('\\n','').split(' ')\n",
-    "    endpoint_datacenter[id_endpoint] = int(endpoint[0])\n",
-    "    n_latency = int(endpoint[1])\n",
-    "    for i in range(n_latency):\n",
-    "        lat_cache = file.readline().replace('\\n','').split(' ')\n",
-    "        endpoint_cache[id_endpoint, int(lat_cache[0])] = int(lat_cache[1])\n",
+    "    for id_requ_des in range(header_dict['requ_des']):\n",
+    "        requ_des = file.readline().replace('\\n','').split(' ')\n",
+    "        endpoint_video[int(requ_des[1]), int(requ_des[0])] += int(requ_des[2])\n",
+    "\n",
+    "    if print_debug:\n",
+    "        print('File description=\\n', '\\t\\t', header_dict)\n",
+    "        print('Video sizes=\\n', '\\t\\tshape=', video_size.shape, ' nnz=', len(np.nonzero(video_size)[0]))\n",
+    "        print('Endpoint to chache=\\n', '\\t\\tshape=', endpoint_cache.shape, ' nnz=', len(np.nonzero(endpoint_cache)[0]))\n",
+    "        print('Endpoint to video=\\n', '\\t\\tshape=', endpoint_video.shape, ' max=', np.max(endpoint_video))\n",
     "    \n",
-    "for id_requ_des in range(header_dict['requ_des']):\n",
-    "    requ_des = file.readline().replace('\\n','').split(' ')\n",
-    "    endpoint_video[int(requ_des[1]), int(requ_des[0])] += int(requ_des[2])\n",
+    "    return endpoint_cache, endpoint_datacenter, endpoint_video, video_size\n",
     "\n",
-    "if print_debug:\n",
-    "    print('File description=\\n', '\\t\\t', header_dict)\n",
-    "    print('Video sizes=\\n', '\\t\\tshape=', video_size.shape, ' nnz=', len(np.nonzero(video_size)[0]))\n",
-    "    print('Endpoint to chache=\\n', '\\t\\tshape=', endpoint_cache.shape, ' nnz=', len(np.nonzero(endpoint_cache)[0]))\n",
-    "    print('Endpoint to video=\\n', '\\t\\tshape=', endpoint_video.shape, ' max=', np.max(endpoint_video))\n"
+    "endpoint_cache, endpoint_datacenter, endpoint_video, video_size = load_data(id_file_to_load=0)"
    ]
   }
  ],
