--- a/compute_score.ipynb
+++ b/compute_score.ipynb
@@ -2,26 +2,42 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
-    "E = 2\n",
-    "V = 5\n",
-    "C = 3\n",
+    "# Compute SCORE\n",
+    "def compute_score(endpoint_datacenter, endpoint_cache, endpoint_video, cache):\n",
+    "    E = len(endpoint_datacenter)\n",
+    "    V = len(endpoint_video[0])\n",
+    "    t = 0\n",
+    "    Rtot = 0\n",
+    "    for e in range(0, E):\n",
+    "        for v in range(0, V):\n",
+    "            Ld = endpoint_datacenter[e]\n",
+    "            c = cache[e][v]\n",
+    "            # if not in any cache\n",
+    "            if c == -1:\n",
+    "                L = Ld\n",
+    "            else:\n",
+    "                L = endpoint_cache[e][c]\n",
     "\n",
-    "endpoint_datacenter = [1000, 500]\n",
-    "endpoint_cache = [[100,300,200],[0,0,0]]\n",
-    "endpoint_video = [[0,1000,0,1500,500],[1000,0,0,0,0]]\n",
+    "            Rn = endpoint_video[e][v]\n",
     "\n",
-    "cache = [[-1,2,-1,1,-1],[-1,-1,-1,-1,-1]]"
+    "            Rtot += Rn\n",
+    "            t += Rn * (Ld - L)\n",
+    "    score = t*1000/Rtot\n",
+    "    print(\"Total score : \",score)\n",
+    "    return score\n",
+    "    \n",
+    "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
@@ -30,31 +46,33 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "462500.0\n"
+      "Total score :  462500.0\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "462500.0"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Compute SCORE\n",
-    "t = 0\n",
-    "Rtot = 0\n",
-    "for e in range(0, E):\n",
-    "    for v in range(0, V):\n",
-    "        Ld = endpoint_datacenter[e]\n",
-    "        #c = cache who contain v\n",
-    "        c = cache[e][v]\n",
-    "        # if not\n",
-    "        if c == -1:\n",
-    "            L = Ld\n",
-    "        else:\n",
-    "            L = endpoint_cache[e][c]\n",
+    "# Test with the example\n",
+    "E = 2\n",
+    "V = 5\n",
+    "C = 3\n",
     "\n",
-    "        Rn = endpoint_video[e][v]\n",
-    "        \n",
-    "        Rtot += Rn\n",
-    "        t += Rn * (Ld - L)\n",
-    "score = t*1000/Rtot\n",
-    "print(score)"
+    "endpoint_datacenter = [1000, 500]\n",
+    "endpoint_cache = [[100,300,200],[0,0,0]]\n",
+    "endpoint_video = [[0,1000,0,1500,500],[1000,0,0,0,0]]\n",
+    "\n",
+    "cache = [[-1,2,-1,1,-1],[-1,-1,-1,-1,-1]]\n",
+    "\n",
+    "compute_score(endpoint_datacenter, endpoint_cache, endpoint_video, cache)"
    ]
   }
  ],
