--- a/YouTubeVideo/DataRead.ipynb
+++ b/YouTubeVideo/DataRead.ipynb
@@ -2,20 +2,22 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
     "import numpy as np\n",
+    "import os\n",
     "\n",
-    "files = {0:'me_at_the_zoo.in', 1:'videos_worth_spreading.in', 2:'trending_today.in', 3:'kittens.in'} "
+    "files_ext = {0:'.in', 1:'.out'}\n",
+    "files = {0:'me_at_the_zoo', 1:'videos_worth_spreading', 2:'trending_today', 3:'kittens'} "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
@@ -24,21 +26,23 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "File description=\n",
-      " \t\t {'n_video': 100, 'size_cache': 100, 'n_cache': 10, 'requ_des': 100, 'n_endpoint': 10}\n",
-      "Video sizes=\n",
-      " \t\tshape= (100,)  nnz= 100\n",
-      "Endpoint to chache=\n",
-      " \t\tshape= (10, 10)  nnz= 32\n",
-      "Endpoint to video=\n",
-      " \t\tshape= (10, 100)  max= 3296.0\n"
+      "\n",
+      "***************** Loading *****************\n",
+      "File description \t {'requ_des': 100, 'n_video': 100, 'n_cache': 10, 'n_endpoint': 10, 'size_cache': 100}\n",
+      "Videos sizes \t\tshape= (100,) , nnz= 100\n",
+      "Endpoint to chache \tshape= (10, 10) , nnz= 32\n",
+      "Endpoint to video \tshape= (10, 100) , max= 3296.0\n",
+      "\n",
+      "***************** Saving *****************\n",
+      "... saved as \"me_at_the_zoo.out\"\n"
      ]
     }
    ],
    "source": [
     "def load_data(id_file_to_load = 0, print_debug = True):\n",
+    "    print('\\n***************** Loading *****************')\n",
     "    # Load file\n",
-    "    file = open(files[id_file_to_load], 'r') \n",
+    "    file = open(files[id_file_to_load] + files_ext[0], 'r') \n",
     "\n",
     "    # Header / Video / Endpoints / request descr. / Cache\n",
     "    header = file.readline().replace('\\n','')\n",
@@ -68,16 +72,49 @@
     "    for id_requ_des in range(header_dict['requ_des']):\n",
     "        requ_des = file.readline().replace('\\n','').split(' ')\n",
     "        endpoint_video[int(requ_des[1]), int(requ_des[0])] += int(requ_des[2])\n",
-    "\n",
+    "    file.close()\n",
+    "    \n",
     "    if print_debug:\n",
-    "        print('File description=\\n', '\\t\\t', header_dict)\n",
-    "        print('Video sizes=\\n', '\\t\\tshape=', video_size.shape, ' nnz=', len(np.nonzero(video_size)[0]))\n",
-    "        print('Endpoint to chache=\\n', '\\t\\tshape=', endpoint_cache.shape, ' nnz=', len(np.nonzero(endpoint_cache)[0]))\n",
-    "        print('Endpoint to video=\\n', '\\t\\tshape=', endpoint_video.shape, ' max=', np.max(endpoint_video))\n",
+    "        print('File description', '\\t', header_dict)\n",
+    "        print('Videos sizes', '\\t\\tshape=', video_size.shape, ', nnz=', len(np.nonzero(video_size)[0]))\n",
+    "        print('Endpoint to chache', '\\tshape=', endpoint_cache.shape, ', nnz=', len(np.nonzero(endpoint_cache)[0]))\n",
+    "        print('Endpoint to video', '\\tshape=', endpoint_video.shape, ', max=', np.max(endpoint_video))\n",
     "    \n",
     "    return endpoint_cache, endpoint_datacenter, endpoint_video, video_size\n",
     "\n",
-    "endpoint_cache, endpoint_datacenter, endpoint_video, video_size = load_data(id_file_to_load=0)"
+    "\n",
+    "def save_file(id_file_to_save = 0, caches_video_lists=None):\n",
+    "    print('\\n***************** Saving *****************')\n",
+    "    filename = files[id_file_to_save] + files_ext[1]\n",
+    "    # Delete if existing\n",
+    "    if os.path.isfile(filename):\n",
+    "        os.remove(filename)\n",
+    "    file = open(filename, 'a') \n",
+    "    \n",
+    "    # Write number caches\n",
+    "    file.write(str(len(caches_video_lists)) + '\\n')\n",
+    "\n",
+    "    # Write each cache\n",
+    "    for i, caches in enumerate(caches_video_lists):\n",
+    "        # Print chache id\n",
+    "        file.write(str(i) + ' ')\n",
+    "        for j, video in enumerate(caches):\n",
+    "            # Print video ids\n",
+    "            file.write(str(video))\n",
+    "            # Print space only if not last item\n",
+    "            if j != len(caches)-1:\n",
+    "                file.write(' ')\n",
+    "        file.write('\\n')\n",
+    "    file.close()\n",
+    "    # Out save file\n",
+    "    print('... saved as \\\"' + filename + '\\\"')\n",
+    "\n",
+    "# Load data\n",
+    "endpoint_cache, endpoint_datacenter, endpoint_video, video_size = load_data(id_file_to_load=0)\n",
+    "\n",
+    "test_out = [[2],[3, 1],[0, 1]]\n",
+    "# Save data\n",
+    "save_file(id_file_to_save=0, caches_video_lists=test_out)"
    ]
   }
  ],
