--- a/YouTubeVideo/DataRead.ipynb
+++ b/YouTubeVideo/DataRead.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "metadata": {
     "collapsed": false
    },
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 17,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -27,14 +27,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "File description=\n",
-      " \t\t {'n_endpoint': 10, 'size_cache': 100, 'n_cache': 10, 'n_video': 100, 'requ_des': 100}\n",
-      "Video sizes=\n",
-      " \t\tshape= (100,)  nnz= 100\n",
-      "Endpoint to chache=\n",
-      " \t\tshape= (10, 10)  nnz= 32\n",
-      "Endpoint to video=\n",
-      " \t\tshape= (10, 100)  max= 3296.0\n"
+      "\n",
+      "***************** Loading *****************\n",
+      "File description \t {'requ_des': 100, 'n_video': 100, 'n_cache': 10, 'n_endpoint': 10, 'size_cache': 100}\n",
+      "Videos sizes \t\tshape= (100,) , nnz= 100\n",
+      "Endpoint to chache \tshape= (10, 10) , nnz= 32\n",
+      "Endpoint to video \tshape= (10, 100) , max= 3296.0\n",
+      "\n",
+      "***************** Saving *****************\n",
+      "... saved as \"me_at_the_zoo.out\"\n"
      ]
     }
    ],
@@ -120,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 18,
    "metadata": {
     "collapsed": false
    },
@@ -131,7 +132,7 @@
        "array([ 170.,   22.,  224.,    0.,    0.,    0.,    0.,    0.,    0.,    0.])"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -165,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 20,
    "metadata": {
     "collapsed": false
    },
@@ -176,7 +177,7 @@
        "0.0"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -187,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 21,
    "metadata": {
     "collapsed": false
    },
@@ -198,7 +199,7 @@
        "0.0"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -711,7 +712,7 @@
     }
    ],
    "source": [
-    "cache_videos_saved"
+    "# cache_videos_saved"
    ]
   },
   {
