--- a/compute_score.ipynb
+++ b/compute_score.ipynb
@@ -9,7 +9,7 @@
    "outputs": [],
    "source": [
     "# Compute SCORE\n",
-    "def compute_score(endpoint_datacenter, endpoint_cache, endpoint_video, cache):\n",
+    "def compute_score(endpoint_datacenter, endpoint_cache, endpoint_video, endpoint_video):\n",
     "    E = len(endpoint_datacenter)\n",
     "    V = len(endpoint_video[0])\n",
     "    t = 0\n",
