--- a/compute_score.ipynb
+++ b/compute_score.ipynb
@@ -2,14 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
     "# Compute SCORE\n",
-    "def compute_score(endpoint_datacenter, endpoint_cache, endpoint_video, endpoint_video):\n",
+    "def compute_score(endpoint_datacenter, endpoint_cache, endpoint_video, endpoint_video_cache):\n",
     "    E = len(endpoint_datacenter)\n",
     "    V = len(endpoint_video[0])\n",
     "    t = 0\n",
@@ -17,7 +17,7 @@
     "    for e in range(0, E):\n",
     "        for v in range(0, V):\n",
     "            Ld = endpoint_datacenter[e]\n",
-    "            c = cache[e][v]\n",
+    "            c = endpoint_video_cache[e][v]\n",
     "            # if not in any cache\n",
     "            if c == -1:\n",
     "                L = Ld\n",
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
@@ -55,7 +55,7 @@
        "462500.0"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
