--- a/YouTubeVideo/DataRead.ipynb
+++ b/YouTubeVideo/DataRead.ipynb
@@ -12,6 +12,7 @@
     "import os\n",
     "import knapsack as ks\n",
     "\n",
+    "id_file_out = 0\n",
     "files_ext = {0:'.in', 1:'.out'}\n",
     "files = {0:'me_at_the_zoo', 1:'videos_worth_spreading', 2:'trending_today', 3:'kittens'} "
    ]
@@ -30,13 +31,10 @@
      "text": [
       "\n",
       "***************** Loading *****************\n",
-      "File description \t {'n_cache': 10, 'n_video': 100, 'requ_des': 100, 'n_endpoint': 10, 'size_cache': 100}\n",
+      "File description \t {'n_cache': 10, 'n_endpoint': 10, 'size_cache': 100, 'n_video': 100, 'requ_des': 100}\n",
       "Videos sizes \t\tshape= (100,) , nnz= 100\n",
       "Endpoint to chache \tshape= (10, 10) , nnz= 32\n",
-      "Endpoint to video \tshape= (10, 100) , max= 3296.0\n",
-      "\n",
-      "***************** Saving *****************\n",
-      "... saved as \"me_at_the_zoo.out\"\n"
+      "Endpoint to video \tshape= (10, 100) , max= 3296.0\n"
      ]
     }
    ],
@@ -113,45 +111,21 @@
     "    print('... saved as \\\"' + filename + '\\\"')\n",
     "\n",
     "# Load data\n",
-    "endpoint_cache, endpoint_datacenter, endpoint_video, video_size, size_cache  = load_data(id_file_to_load=0)\n",
-    "\n",
-    "test_out = [[2],[3, 1],[0, 1]]\n",
-    "# Save data\n",
-    "save_file(id_file_to_save=0, caches_video_lists=test_out)"
+    "endpoint_cache, endpoint_datacenter, endpoint_video, video_size, size_cache  = load_data(id_file_to_load=id_file_out)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(10, 100)"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "cache_videos_saved = np.zeros((endpoint_cache.shape[1], video_size.shape[0])) # Latency endpoint to cache\n",
-    "cache_videos_saved.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {
     "collapsed": false,
     "scrolled": true
    },
    "outputs": [],
    "source": [
+    "cache_videos_saved = np.zeros((endpoint_cache.shape[1], video_size.shape[0])) # Latency endpoint to cache\n",
+    "cache_videos_saved.shape\n",
+    "\n",
     "for i in range(endpoint_cache.shape[1]):\n",
     "    for j in range(endpoint_cache.shape[0]):\n",
     "        if endpoint_cache[j][i] > 0:\n",
@@ -159,96 +133,8 @@
     "                if(endpoint_video[j][k] > 0):\n",
     "                    # print(\"saved time on video\", k, \"with cache\", i, \"with endpoint\", j)\n",
     "                    pass\n",
-    "                cache_videos_saved[i][k] += (endpoint_datacenter[j] - endpoint_cache[j][i]) * endpoint_video[j][k]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[(20, 1302899), (11, 1069618), (50, 251635), (26, 0), (5, 0), (3, 581126), (6, 0), (32, 260326), (40, 644728), (22, 0), (4, 88192), (20, 0), (50, 0), (27, 386937), (49, 0), (44, 621291), (1, 182900), (37, 0), (35, 0), (27, 220660), (14, 0), (33, 0), (6, 0), (22, 0), (23, 0), (48, 0), (44, 163542), (14, 0), (26, 0), (9, 0), (46, 0), (44, 493155), (15, 0), (32, 0), (31, 0), (8, 0), (39, 0), (27, 0), (39, 0), (27, 0), (1, 0), (17, 0), (1, 0), (47, 0), (44, 0), (42, 0), (16, 299715), (3, 0), (44, 0), (48, 0), (5, 0), (25, 0), (4, 0), (39, 0), (39, 0), (7, 0), (24, 0), (28, 0), (14, 0), (44, 0), (22, 0), (11, 0), (27, 0), (37, 0), (11, 0), (16, 780618), (50, 0), (33, 0), (22, 0), (26, 0), (7, 0), (12, 0), (17, 0), (30, 0), (12, 0), (12, 0), (4, 0), (32, 0), (12, 0), (46, 0), (43, 0), (4, 0), (12, 212400), (34, 0), (11, 0), (7, 0), (47, 0), (29, 0), (24, 0), (40, 204633), (41, 0), (10, 0), (5, 0), (22, 0), (22, 0), (24, 0), (37, 0), (34, 0), (50, 0), (5, 650796)]\n"
-     ]
-    }
-   ],
-   "source": [
-    "items_value = cache_videos_saved[0].astype(int)\n",
-    "items_weight = video_size\n",
-    "items = list(zip(items_weight,items_value))\n",
-    "print(items)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "solution, w, v = ks.solve(items, size_cache)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "solution of weight 100, value 5300877 found:\n",
-      "(5, 650796), (16, 780618), (1, 182900), (4, 88192), (40, 644728), (3, 581126), (11, 1069618), (20, 1302899)\n",
-      "[(5, 650796), (16, 780618), (1, 182900), (4, 88192), (40, 644728), (3, 581126), (11, 1069618), (20, 1302899)]\n"
-     ]
-    }
-   ],
-   "source": [
-    "if solution != []:\n",
-    "    \n",
-    "    print(\"solution of weight %d, value %d found:\" % (w,v))\n",
-    "    print(\", \".join(map(lambda t: str(t), solution)))\n",
-    "else:\n",
-    "    # this should never happen (and hasen't as far as we're concerned)\n",
-    "    print('no solution found(!).')\n",
-    "    \n",
-    "print(solution)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[(20, 1302899), (11, 1069618), (50, 251635), (26, 0), (5, 0), (3, 581126), (6, 0), (32, 260326), (40, 644728), (22, 0), (4, 88192), (20, 0), (50, 0), (27, 386937), (49, 0), (44, 621291), (1, 182900), (37, 0), (35, 0), (27, 220660), (14, 0), (33, 0), (6, 0), (22, 0), (23, 0), (48, 0), (44, 163542), (14, 0), (26, 0), (9, 0), (46, 0), (44, 493155), (15, 0), (32, 0), (31, 0), (8, 0), (39, 0), (27, 0), (39, 0), (27, 0), (1, 0), (17, 0), (1, 0), (47, 0), (44, 0), (42, 0), (16, 299715), (3, 0), (44, 0), (48, 0), (5, 0), (25, 0), (4, 0), (39, 0), (39, 0), (7, 0), (24, 0), (28, 0), (14, 0), (44, 0), (22, 0), (11, 0), (27, 0), (37, 0), (11, 0), (16, 780618), (50, 0), (33, 0), (22, 0), (26, 0), (7, 0), (12, 0), (17, 0), (30, 0), (12, 0), (12, 0), (4, 0), (32, 0), (12, 0), (46, 0), (43, 0), (4, 0), (12, 212400), (34, 0), (11, 0), (7, 0), (47, 0), (29, 0), (24, 0), (40, 204633), (41, 0), (10, 0), (5, 0), (22, 0), (22, 0), (24, 0), (37, 0), (34, 0), (50, 0), (5, 650796)]\n",
-      "[(20, 3669138), (11, 1346058), (50, 433840), (26, 489496), (5, 0), (3, 357884), (6, 253880), (32, 1002930), (40, 545478), (22, 0), (4, 1102856), (20, 0), (50, 0), (27, 1306677), (49, 0), (44, 730367), (1, 30800), (37, 551760), (35, 0), (27, 0), (14, 0), (33, 0), (6, 0), (22, 0), (23, 0), (48, 0), (44, 192254), (14, 0), (26, 0), (9, 0), (46, 0), (44, 579735), (15, 653904), (32, 0), (31, 330880), (8, 0), (39, 0), (27, 0), (39, 0), (27, 0), (1, 0), (17, 0), (1, 0), (47, 0), (44, 0), (42, 0), (16, 281010), (3, 0), (44, 0), (48, 0), (5, 0), (25, 0), (4, 0), (39, 0), (39, 0), (7, 0), (24, 0), (28, 0), (14, 0), (44, 0), (22, 0), (11, 0), (27, 0), (37, 0), (11, 0), (16, 917666), (50, 0), (33, 0), (22, 0), (26, 0), (7, 0), (12, 0), (17, 0), (30, 0), (12, 0), (12, 0), (4, 0), (32, 0), (12, 0), (46, 0), (43, 0), (4, 109440), (12, 0), (34, 0), (11, 0), (7, 0), (47, 0), (29, 0), (24, 0), (40, 191862), (41, 0), (10, 0), (5, 0), (22, 0), (22, 0), (24, 0), (37, 0), (34, 0), (50, 0), (5, 765052)]\n",
-      "[(20, 945380), (11, 1838017), (50, 315603), (26, 0), (5, 752820), (3, 244856), (6, 0), (32, 168846), (40, 899408), (22, 0), (4, 39200), (20, 0), (50, 0), (27, 362151), (49, 0), (44, 581493), (1, 1351435), (37, 0), (35, 0), (27, 187748), (14, 0), (33, 0), (6, 0), (22, 294750), (23, 0), (48, 0), (44, 153066), (14, 0), (26, 0), (9, 0), (46, 129780), (44, 461565), (15, 0), (32, 0), (31, 0), (8, 0), (39, 0), (27, 0), (39, 0), (27, 0), (1, 0), (17, 0), (1, 0), (47, 372375), (44, 0), (42, 0), (16, 0), (3, 0), (44, 0), (48, 0), (5, 0), (25, 0), (4, 0), (39, 0), (39, 0), (7, 0), (24, 0), (28, 0), (14, 0), (44, 0), (22, 0), (11, 0), (27, 9000), (37, 0), (11, 0), (16, 730614), (50, 0), (33, 0), (22, 0), (26, 0), (7, 0), (12, 0), (17, 0), (30, 0), (12, 0), (12, 0), (4, 0), (32, 0), (12, 0), (46, 0), (43, 0), (4, 0), (12, 180720), (34, 0), (11, 0), (7, 0), (47, 0), (29, 0), (24, 0), (40, 0), (41, 0), (10, 0), (5, 0), (22, 0), (22, 0), (24, 0), (37, 0), (34, 0), (50, 0), (5, 609108)]\n",
-      "[(20, 934251), (11, 35148), (50, 496911), (26, 65484), (5, 382689), (3, 162711), (6, 0), (32, 0), (40, 263772), (22, 0), (4, 84840), (20, 0), (50, 0), (27, 0), (49, 0), (44, 0), (1, 301788), (37, 0), (35, 0), (27, 0), (14, 0), (33, 0), (6, 0), (22, 0), (23, 85374), (48, 0), (44, 3060), (14, 104040), (26, 0), (9, 0), (46, 280881), (44, 0), (15, 0), (32, 0), (31, 0), (8, 0), (39, 0), (27, 0), (39, 0), (27, 0), (1, 0), (17, 0), (1, 0), (47, 0), (44, 0), (42, 0), (16, 0), (3, 0), (44, 0), (48, 0), (5, 0), (25, 0), (4, 0), (39, 0), (39, 190026), (7, 0), (24, 0), (28, 0), (14, 0), (44, 0), (22, 0), (11, 0), (27, 0), (37, 0), (11, 0), (16, 0), (50, 0), (33, 0), (22, 0), (26, 0), (7, 0), (12, 0), (17, 0), (30, 0), (12, 0), (12, 0), (4, 0), (32, 0), (12, 0), (46, 0), (43, 0), (4, 0), (12, 0), (34, 0), (11, 0), (7, 0), (47, 0), (29, 0), (24, 0), (40, 0), (41, 0), (10, 0), (5, 0), (22, 0), (22, 0), (24, 0), (37, 0), (34, 0), (50, 0), (5, 0)]\n",
-      "[(20, 1898479), (11, 40880), (50, 0), (26, 116477), (5, 68720), (3, 0), (6, 0), (32, 737115), (40, 371844), (22, 0), (4, 665751), (20, 0), (50, 0), (27, 896946), (49, 0), (44, 0), (1, 7440), (37, 568095), (35, 0), (27, 0), (14, 0), (33, 70400), (6, 0), (22, 0), (23, 0), (48, 0), (44, 0), (14, 0), (26, 0), (9, 0), (46, 70560), (44, 0), (15, 673263), (32, 0), (31, 0), (8, 0), (39, 0), (27, 0), (39, 0), (27, 0), (1, 0), (17, 0), (1, 0), (47, 0), (44, 21360), (42, 0), (16, 0), (3, 0), (44, 0), (48, 0), (5, 0), (25, 0), (4, 0), (39, 0), (39, 0), (7, 0), (24, 0), (28, 0), (14, 0), (44, 0), (22, 0), (11, 0), (27, 0), (37, 0), (11, 0), (16, 0), (50, 0), (33, 0), (22, 0), (26, 0), (7, 0), (12, 0), (17, 0), (30, 0), (12, 0), (12, 0), (4, 0), (32, 0), (12, 0), (46, 0), (43, 0), (4, 112680), (12, 0), (34, 0), (11, 0), (7, 0), (47, 0), (29, 0), (24, 0), (40, 0), (41, 0), (10, 0), (5, 0), (22, 0), (22, 0), (24, 0), (37, 0), (34, 0), (50, 0), (5, 0)]\n",
-      "[(20, 3640102), (11, 147091), (50, 494902), (26, 251613), (5, 486495), (3, 120288), (6, 0), (32, 872920), (40, 756706), (22, 0), (4, 851128), (20, 0), (50, 0), (27, 1097621), (49, 0), (44, 0), (1, 245145), (37, 672760), (35, 0), (27, 0), (14, 0), (33, 208560), (6, 0), (22, 0), (23, 102393), (48, 0), (44, 3670), (14, 124780), (26, 0), (9, 0), (46, 416682), (44, 0), (15, 797304), (32, 0), (31, 0), (8, 0), (39, 0), (27, 0), (39, 0), (27, 0), (1, 0), (17, 0), (1, 0), (47, 0), (44, 63279), (42, 0), (16, 0), (3, 0), (44, 0), (48, 0), (5, 0), (25, 0), (4, 0), (39, 0), (39, 227907), (7, 0), (24, 0), (28, 0), (14, 0), (44, 0), (22, 0), (11, 0), (27, 0), (37, 0), (11, 0), (16, 0), (50, 0), (33, 0), (22, 0), (26, 0), (7, 0), (12, 0), (17, 0), (30, 0), (12, 0), (12, 0), (4, 0), (32, 0), (12, 0), (46, 0), (43, 0), (4, 133440), (12, 0), (34, 0), (11, 0), (7, 0), (47, 0), (29, 0), (24, 0), (40, 0), (41, 0), (10, 0), (5, 0), (22, 0), (22, 0), (24, 0), (37, 0), (34, 0), (50, 0), (5, 0)]\n",
-      "[(20, 1952728), (11, 182165), (50, 505048), (26, 157791), (5, 539047), (3, 117066), (6, 0), (32, 0), (40, 330146), (22, 0), (4, 61040), (20, 0), (50, 0), (27, 76443), (49, 0), (44, 0), (1, 245679), (37, 0), (35, 0), (27, 0), (14, 0), (33, 270160), (6, 0), (22, 0), (23, 106857), (48, 0), (44, 3830), (14, 130220), (26, 0), (9, 0), (46, 472860), (44, 0), (15, 0), (32, 0), (31, 0), (8, 0), (39, 0), (27, 0), (39, 0), (27, 0), (1, 0), (17, 0), (1, 0), (47, 0), (44, 81969), (42, 0), (16, 0), (3, 0), (44, 0), (48, 0), (5, 0), (25, 0), (4, 0), (39, 0), (39, 237843), (7, 0), (24, 0), (28, 0), (14, 0), (44, 0), (22, 0), (11, 0), (27, 0), (37, 0), (11, 0), (16, 0), (50, 0), (33, 0), (22, 0), (26, 0), (7, 0), (12, 0), (17, 0), (30, 0), (12, 0), (12, 0), (4, 0), (32, 0), (12, 0), (46, 0), (43, 0), (4, 0), (12, 0), (34, 0), (11, 0), (7, 0), (47, 0), (29, 0), (24, 0), (40, 0), (41, 0), (10, 0), (5, 0), (22, 0), (22, 0), (24, 0), (37, 0), (34, 0), (50, 0), (5, 0)]\n",
-      "[(20, 1384948), (11, 243593), (50, 405024), (26, 132157), (5, 225917), (3, 43960), (6, 0), (32, 28560), (40, 270668), (22, 0), (4, 0), (20, 42140), (50, 0), (27, 65487), (49, 0), (44, 0), (1, 24459), (37, 0), (35, 0), (27, 0), (14, 0), (33, 231440), (6, 0), (22, 0), (23, 87606), (48, 0), (44, 3140), (14, 106760), (26, 0), (9, 0), (46, 231966), (44, 0), (15, 0), (32, 0), (31, 0), (8, 0), (39, 0), (27, 0), (39, 0), (27, 0), (1, 0), (17, 0), (1, 0), (47, 0), (44, 70221), (42, 0), (16, 0), (3, 0), (44, 0), (48, 0), (5, 0), (25, 0), (4, 0), (39, 0), (39, 288934), (7, 0), (24, 0), (28, 0), (14, 0), (44, 0), (22, 0), (11, 0), (27, 0), (37, 0), (11, 0), (16, 15260), (50, 0), (33, 0), (22, 0), (26, 0), (7, 0), (12, 0), (17, 0), (30, 0), (12, 123900), (12, 0), (4, 0), (32, 0), (12, 0), (46, 0), (43, 0), (4, 0), (12, 0), (34, 0), (11, 0), (7, 0), (47, 0), (29, 0), (24, 0), (40, 0), (41, 0), (10, 0), (5, 0), (22, 0), (22, 0), (24, 0), (37, 0), (34, 0), (50, 0), (5, 0)]\n",
-      "[(20, 2300560), (11, 315052), (50, 912602), (26, 536842), (5, 213891), (3, 109512), (6, 253303), (32, 0), (40, 592922), (22, 0), (4, 372711), (20, 0), (50, 0), (27, 62001), (49, 0), (44, 0), (1, 154327), (37, 0), (35, 0), (27, 121176), (14, 0), (33, 219120), (6, 0), (22, 0), (23, 105183), (48, 0), (44, 3770), (14, 128180), (26, 0), (9, 0), (46, 219618), (44, 0), (15, 0), (32, 0), (31, 330128), (8, 0), (39, 0), (27, 0), (39, 0), (27, 0), (1, 0), (17, 0), (1, 0), (47, 0), (44, 66483), (42, 0), (16, 0), (3, 0), (44, 0), (48, 0), (5, 0), (25, 0), (4, 0), (39, 0), (39, 234117), (7, 0), (24, 0), (28, 0), (14, 0), (44, 0), (22, 0), (11, 0), (27, 0), (37, 0), (11, 0), (16, 0), (50, 0), (33, 0), (22, 0), (26, 0), (7, 0), (12, 0), (17, 0), (30, 0), (12, 0), (12, 0), (4, 0), (32, 0), (12, 0), (46, 0), (43, 0), (4, 0), (12, 116640), (34, 0), (11, 0), (7, 0), (47, 0), (29, 0), (24, 0), (40, 0), (41, 0), (10, 0), (5, 0), (22, 0), (22, 0), (24, 0), (37, 0), (34, 0), (50, 0), (5, 0)]\n",
-      "[(20, 1177323), (11, 1167743), (50, 412112), (26, 0), (5, 958757), (3, 315367), (6, 0), (32, 0), (40, 719266), (22, 0), (4, 83720), (20, 0), (50, 0), (27, 0), (49, 0), (44, 0), (1, 1505549), (37, 0), (35, 0), (27, 171292), (14, 0), (33, 0), (6, 0), (22, 297370), (23, 0), (48, 0), (44, 0), (14, 0), (26, 0), (9, 0), (46, 277173), (44, 0), (15, 0), (32, 0), (31, 0), (8, 0), (39, 0), (27, 0), (39, 0), (27, 0), (1, 0), (17, 0), (1, 0), (47, 375685), (44, 0), (42, 0), (16, 0), (3, 0), (44, 0), (48, 0), (5, 0), (25, 0), (4, 0), (39, 0), (39, 0), (7, 0), (24, 0), (28, 0), (14, 0), (44, 0), (22, 0), (11, 0), (27, 9080), (37, 0), (11, 0), (16, 0), (50, 0), (33, 0), (22, 0), (26, 0), (7, 0), (12, 0), (17, 0), (30, 0), (12, 0), (12, 0), (4, 0), (32, 0), (12, 0), (46, 0), (43, 0), (4, 0), (12, 164880), (34, 0), (11, 0), (7, 0), (47, 0), (29, 0), (24, 0), (40, 0), (41, 0), (10, 0), (5, 0), (22, 0), (22, 0), (24, 0), (37, 0), (34, 0), (50, 0), (5, 0)]\n"
-     ]
-    }
-   ],
-   "source": [
+    "                cache_videos_saved[i][k] += (endpoint_datacenter[j] - endpoint_cache[j][i]) * endpoint_video[j][k]\n",
+    "\n",
     "# Get feature for all caches\n",
     "res_tot = []\n",
     "for i in range(cache_videos_saved.shape[0]):\n",
@@ -258,8 +144,30 @@
     "    items_weight = video_size\n",
     "    items = list(zip(items_weight,items_value))\n",
     "    # Solve it\n",
-    "    solution, w, v = ks.solve(items, size_cache)\n",
-    "    res_tot.append()"
+    "    solution, w, v, ids_vid = ks.solve(items, size_cache)\n",
+    "    res_tot.append(ids_vid)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "***************** Saving *****************\n",
+      "... saved as \"me_at_the_zoo.out\"\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Save data\n",
+    "save_file(id_file_to_save=id_file_out, caches_video_lists=res_tot)"
    ]
   }
  ],
